[gd_scene load_steps=8 format=4 uid="uid://6jj0s1qr2xli"]

[ext_resource type="Script" uid="uid://md4njrb1otfw" path="res://Scenes/control.gd" id="1_uy3b0"]
[ext_resource type="Texture2D" uid="uid://216ua8yeh8lr" path="res://Sprites/background.png" id="1_ynf4x"]
[ext_resource type="Script" uid="uid://cloxjchntwpok" path="res://rich_text_label.gd" id="2_4qwwl"]
[ext_resource type="Script" uid="uid://d07q42oy4y5c2" path="res://Scenes/BackButton.gd" id="3_7xmno"]
[ext_resource type="PackedScene" uid="uid://b5jmgs3xt5uob" path="res://Scenes/FadeTransitions.tscn" id="5_iynit"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4qwwl"]
texture = ExtResource("1_ynf4x")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0

[sub_resource type="TileSet" id="TileSet_obosj"]
sources/0 = SubResource("TileSetAtlasSource_4qwwl")

[node name="Credits" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_uy3b0")

[node name="TileMapLayer" type="TileMapLayer" parent="Control"]
texture_filter = 1
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAAAAAAAAABAAUAAAABAAAAAAACAAUAAAACAAAAAAACAAUAAAADAAAAAAACAAUAAAAEAAAAAAACAAUAAAAFAAAAAAACAAUAAAAGAAAAAAACAAUAAAAHAAAAAAACAAUAAAAIAAAAAAACAAUAAAAJAAAAAAACAAUAAAAKAAAAAAACAAUAAAALAAAAAAACAAUAAAAMAAAAAAACAAUAAAANAAAAAAACAAUAAAAOAAAAAAACAAUAAAAPAAAAAAACAAUAAAAQAAAAAAACAAUAAAARAAAAAAACAAUAAAASAAAAAAACAAUAAAATAAAAAAACAAUAAAAUAAAAAAACAAUAAAAVAAAAAAACAAUAAAAWAAAAAAACAAUAAAAXAAAAAAADAAUAAAAXAAEAAAADAAYAAAAXAAIAAAADAAYAAAAXAAMAAAADAAYAAAAXAAQAAAADAAYAAAAXAAUAAAADAAYAAAAXAAYAAAADAAYAAAAXAAcAAAADAAYAAAAXAAgAAAADAAYAAAAXAAkAAAADAAYAAAAXAAoAAAADAAYAAAAXAAsAAAADAAYAAAAXAAwAAAADAAYAAAAXAA0AAAADAAcAAAAWAA0AAAACAAcAAAAVAA0AAAACAAcAAAAUAA0AAAACAAcAAAATAA0AAAACAAcAAAASAA0AAAACAAcAAAARAA0AAAACAAcAAAAQAA0AAAACAAcAAAAPAA0AAAACAAcAAAAOAA0AAAACAAcAAAANAA0AAAACAAcAAAAMAA0AAAACAAcAAAALAA0AAAACAAcAAAAKAA0AAAACAAcAAAAJAA0AAAACAAcAAAAIAA0AAAACAAcAAAAHAA0AAAACAAcAAAAGAA0AAAACAAcAAAAFAA0AAAACAAcAAAAEAA0AAAACAAcAAAADAA0AAAACAAcAAAACAA0AAAACAAcAAAABAA0AAAACAAcAAAAAAA0AAAABAAcAAAAAAAwAAAABAAYAAAAAAAsAAAABAAYAAAAAAAoAAAABAAYAAAAAAAkAAAABAAYAAAAAAAgAAAABAAYAAAAAAAcAAAABAAYAAAAAAAYAAAABAAYAAAAAAAUAAAABAAYAAAAAAAQAAAABAAYAAAAAAAMAAAABAAYAAAAAAAIAAAABAAYAAAAAAAEAAAABAAYAAAACAAUAAAACAAYAAAACAAQAAAACAAYAAAACAAMAAAACAAYAAAACAAIAAAACAAYAAAACAAEAAAACAAYAAAABAAEAAAACAAYAAAABAAIAAAACAAYAAAABAAMAAAACAAYAAAABAAQAAAACAAYAAAABAAUAAAACAAYAAAABAAYAAAACAAYAAAABAAcAAAACAAYAAAABAAgAAAACAAYAAAABAAkAAAACAAYAAAABAAoAAAACAAYAAAABAAsAAAACAAYAAAABAAwAAAACAAYAAAACAAwAAAACAAYAAAACAAsAAAACAAYAAAACAAoAAAACAAYAAAACAAkAAAACAAYAAAACAAgAAAACAAYAAAACAAcAAAACAAYAAAACAAYAAAACAAYAAAADAAYAAAACAAYAAAADAAUAAAACAAYAAAADAAQAAAACAAYAAAADAAMAAAACAAYAAAADAAIAAAACAAYAAAADAAEAAAACAAYAAAAEAAEAAAACAAYAAAAEAAIAAAACAAYAAAAEAAMAAAACAAYAAAAEAAQAAAACAAYAAAAEAAUAAAACAAYAAAAEAAYAAAACAAYAAAAEAAcAAAACAAYAAAADAAcAAAACAAYAAAADAAgAAAACAAYAAAADAAkAAAACAAYAAAADAAoAAAACAAYAAAADAAsAAAACAAYAAAADAAwAAAACAAYAAAAEAAwAAAACAAYAAAAEAAsAAAACAAYAAAAEAAoAAAACAAYAAAAEAAkAAAACAAYAAAAEAAgAAAACAAYAAAAFAAgAAAACAAYAAAAFAAcAAAACAAYAAAAFAAYAAAACAAYAAAAFAAUAAAACAAYAAAAFAAQAAAACAAYAAAAFAAMAAAACAAYAAAAFAAIAAAACAAYAAAAFAAEAAAACAAYAAAAGAAEAAAACAAYAAAAGAAIAAAACAAYAAAAGAAMAAAACAAYAAAAGAAQAAAACAAYAAAAGAAUAAAACAAYAAAAGAAYAAAACAAYAAAAGAAcAAAACAAYAAAAGAAgAAAACAAYAAAAGAAkAAAACAAYAAAAFAAkAAAACAAYAAAAFAAoAAAACAAYAAAAFAAsAAAACAAYAAAAFAAwAAAACAAYAAAAGAAwAAAACAAYAAAAGAAsAAAACAAYAAAAGAAoAAAACAAYAAAAHAAoAAAACAAYAAAAHAAkAAAACAAYAAAAHAAgAAAACAAYAAAAHAAcAAAACAAYAAAAHAAYAAAACAAYAAAAHAAUAAAACAAYAAAAHAAQAAAACAAYAAAAHAAMAAAACAAYAAAAHAAIAAAACAAYAAAAHAAEAAAACAAYAAAAIAAEAAAACAAYAAAAIAAIAAAACAAYAAAAIAAMAAAACAAYAAAAIAAQAAAACAAYAAAAIAAUAAAACAAYAAAAIAAYAAAACAAYAAAAIAAcAAAACAAYAAAAIAAgAAAACAAYAAAAIAAkAAAACAAYAAAAIAAoAAAACAAYAAAAIAAsAAAACAAYAAAAHAAsAAAACAAYAAAAHAAwAAAACAAYAAAAIAAwAAAACAAYAAAAJAAwAAAACAAYAAAAJAAsAAAACAAYAAAAJAAoAAAACAAYAAAAJAAkAAAACAAYAAAAJAAgAAAACAAYAAAAJAAcAAAACAAYAAAAJAAYAAAACAAYAAAAJAAUAAAACAAYAAAAJAAQAAAACAAYAAAAJAAMAAAACAAYAAAAJAAIAAAACAAYAAAAJAAEAAAACAAYAAAAKAAEAAAACAAYAAAAKAAIAAAACAAYAAAAKAAMAAAACAAYAAAAKAAQAAAACAAYAAAAKAAUAAAACAAYAAAAKAAYAAAACAAYAAAAKAAcAAAACAAYAAAAKAAgAAAACAAYAAAAKAAkAAAACAAYAAAAKAAoAAAACAAYAAAAKAAsAAAACAAYAAAAKAAwAAAACAAYAAAALAAwAAAACAAYAAAALAAsAAAACAAYAAAALAAoAAAACAAYAAAALAAkAAAACAAYAAAALAAgAAAACAAYAAAALAAcAAAACAAYAAAALAAYAAAACAAYAAAALAAUAAAACAAYAAAALAAQAAAACAAYAAAALAAMAAAACAAYAAAALAAIAAAACAAYAAAALAAEAAAACAAYAAAAMAAEAAAACAAYAAAAMAAIAAAACAAYAAAAMAAMAAAACAAYAAAAMAAQAAAACAAYAAAAMAAUAAAACAAYAAAAMAAYAAAACAAYAAAAMAAcAAAACAAYAAAAMAAgAAAACAAYAAAAMAAkAAAACAAYAAAAMAAoAAAACAAYAAAAMAAsAAAACAAYAAAAMAAwAAAACAAYAAAANAAwAAAACAAYAAAANAAsAAAACAAYAAAANAAoAAAACAAYAAAANAAkAAAACAAYAAAANAAgAAAACAAYAAAANAAcAAAACAAYAAAANAAYAAAACAAYAAAANAAUAAAACAAYAAAANAAQAAAACAAYAAAANAAMAAAACAAYAAAANAAIAAAACAAYAAAANAAEAAAACAAYAAAAOAAEAAAACAAYAAAAOAAIAAAACAAYAAAAOAAMAAAACAAYAAAAOAAQAAAACAAYAAAAOAAUAAAACAAYAAAAOAAYAAAACAAYAAAAOAAcAAAACAAYAAAAOAAgAAAACAAYAAAAOAAkAAAACAAYAAAAOAAoAAAACAAYAAAAOAAsAAAACAAYAAAAOAAwAAAACAAYAAAAPAAwAAAACAAYAAAAPAAsAAAACAAYAAAAPAAoAAAACAAYAAAAPAAkAAAACAAYAAAAPAAgAAAACAAYAAAAPAAcAAAACAAYAAAAPAAYAAAACAAYAAAAPAAUAAAACAAYAAAAPAAQAAAACAAYAAAAPAAMAAAACAAYAAAAPAAIAAAACAAYAAAAPAAEAAAACAAYAAAAQAAEAAAACAAYAAAAQAAIAAAACAAYAAAAQAAMAAAACAAYAAAAQAAQAAAACAAYAAAAQAAUAAAACAAYAAAAQAAYAAAACAAYAAAAQAAcAAAACAAYAAAAQAAgAAAACAAYAAAAQAAkAAAACAAYAAAAQAAoAAAACAAYAAAAQAAsAAAACAAYAAAAQAAwAAAACAAYAAAARAAwAAAACAAYAAAARAAsAAAACAAYAAAARAAoAAAACAAYAAAARAAkAAAACAAYAAAARAAgAAAACAAYAAAARAAcAAAACAAYAAAARAAYAAAACAAYAAAARAAUAAAACAAYAAAARAAQAAAACAAYAAAARAAMAAAACAAYAAAARAAIAAAACAAYAAAARAAEAAAACAAYAAAASAAEAAAACAAYAAAASAAIAAAACAAYAAAASAAMAAAACAAYAAAASAAQAAAACAAYAAAASAAUAAAACAAYAAAASAAYAAAACAAYAAAASAAcAAAACAAYAAAASAAgAAAACAAYAAAASAAkAAAACAAYAAAASAAoAAAACAAYAAAASAAsAAAACAAYAAAASAAwAAAACAAYAAAATAAwAAAACAAYAAAATAAsAAAACAAYAAAATAAoAAAACAAYAAAATAAkAAAACAAYAAAATAAgAAAACAAYAAAATAAcAAAACAAYAAAATAAYAAAACAAYAAAATAAUAAAACAAYAAAATAAQAAAACAAYAAAATAAMAAAACAAYAAAATAAIAAAACAAYAAAATAAEAAAACAAYAAAAUAAEAAAACAAYAAAAUAAIAAAACAAYAAAAUAAMAAAACAAYAAAAUAAQAAAACAAYAAAAUAAUAAAACAAYAAAAUAAYAAAACAAYAAAAUAAcAAAACAAYAAAAUAAgAAAACAAYAAAAUAAkAAAACAAYAAAAUAAoAAAACAAYAAAAUAAsAAAACAAYAAAAUAAwAAAACAAYAAAAVAAwAAAACAAYAAAAVAAsAAAACAAYAAAAVAAoAAAACAAYAAAAVAAkAAAACAAYAAAAVAAgAAAACAAYAAAAVAAcAAAACAAYAAAAVAAYAAAACAAYAAAAVAAUAAAACAAYAAAAVAAQAAAACAAYAAAAVAAMAAAACAAYAAAAVAAIAAAACAAYAAAAVAAEAAAACAAYAAAAWAAEAAAACAAYAAAAWAAIAAAACAAYAAAAWAAMAAAACAAYAAAAWAAQAAAACAAYAAAAWAAUAAAACAAYAAAAWAAYAAAACAAYAAAAWAAcAAAACAAYAAAAWAAgAAAACAAYAAAAWAAkAAAACAAYAAAAWAAoAAAACAAYAAAAWAAsAAAACAAYAAAAWAAwAAAACAAYAAAA=")
tile_set = SubResource("TileSet_obosj")

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 127.0
offset_top = 86.0
offset_right = 1059.0
offset_bottom = 600.0
script = ExtResource("2_4qwwl")

[node name="BackButton" type="Button" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 935.0
offset_top = 557.0
offset_right = 1094.0
offset_bottom = 615.0
text = "Back"
script = ExtResource("3_7xmno")

[node name="FadeTransitions" parent="Control" instance=ExtResource("5_iynit")]
visible = false
layout_mode = 0

[node name="BackTimer" type="Timer" parent="Control/FadeTransitions"]

[connection signal="pressed" from="Control/BackButton" to="Control" method="_on_back_button_pressed"]
[connection signal="timeout" from="Control/FadeTransitions/BackTimer" to="Control" method="_on_back_timer_timeout"]
